--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/CozyCabin.jpg"
-            alt="All growth starts at the end of your comfort zone"
+            alt="Всё развитие начинается за пределами зоны комфорта"
             class="card__image filter-oversaturate"
           />
 
@@ -49,7 +49,7 @@
           <p class="card__content-text">Место для ваших воспоминаний о начале обучения.</p>
 
           <div class="card__buttons">
-            <button type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button" aria-hidden="true">
               <svg
                 class="like-icon"
                 width="39"
@@ -99,7 +99,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/beginningoftheroad.jpg"
-            alt="The beginning is always today"
+            alt="Начало всегда сегодня"
             class="card__image filter-grayscale"
           />
 
@@ -167,7 +167,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/roadintheforest.jpeg"
-            alt="I've a feeling we're not in Kansas anymore"
+            alt="Кажется, мы уже не в Канзасе"
             class="card__image filter-contrast"
           />
 
@@ -232,7 +232,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/nightcity.jpg"
-            alt="There is no end to perfection only an end to pursuit"
+            alt="У совершенства нет конца, есть лишь конец стремления к нему"
             class="card__image filter-blur"
           />
           <figcaption class="card__image-label">&lt;/HTML&gt;</figcaption>
@@ -293,7 +293,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/ship.avif"
-            alt="Part of the ship part of the crew"
+            alt="Часть команды — часть корабля"
             class="card__image filter-grayscale"
           />
           <figcaption class="card__image-label">&lt;/HTML&gt;</figcaption>
@@ -355,7 +355,7 @@
         <figure class="image__wrapper">
           <img 
             src="./images/upisdown.jpg" 
-            alt="Close your eyes and pretend it's all a bad dream. That's how I get by" 
+            alt="Закрой глаза и представь, что это плохой сон. Я всегда так делаю" 
             class="card__image filter-multiply" 
           />
           <figcaption class="card__image-label">&lt;/HTML&gt;</figcaption>
@@ -414,7 +414,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/negev.jpg" 
-            alt="Gazing into the abyss utter foolishness. There are many things in the world much more worth gazing into" 
+            alt="Смотреть в бездну, по-моему, – полный идиотизм. В мире есть множество вещей куда более достойных того, чтобы на них смотреть." 
             class="card__image filter-sepia"
           />
           <figcaption class="card__image-label">&lt;/HTML&gt;</figcaption>
@@ -475,7 +475,7 @@
         <figure class="image__wrapper">
           <img
             src="./images/cutecat.jpg"
-            alt="2014 Forest Hills Drive"
+            alt="Милый кот"
             class="card__image filter-hue"
           />
           <figcaption class="card__image-label">&lt;/HTML&gt;</figcaption>
